# Navi

./: .gitignore  CHANGELOG.md  PROPOSAL.md  README.md  README.zh-TW.md  cloudbuild-ingest.yaml  cloudbuild-test.yaml  cloudbuild.yaml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  cli.py  config.py  main.py  pyproject.toml
backend/api/: dependencies.py
backend/api/routes/: backtest.py  chat.py  knowledge.py  portfolio.py  stock.py
backend/data_pipeline/: ingest_knowledge.py
backend/knowledge_base/fundamental_analysis/: earnings_analysis.md  financial_ratios.md  industry_analysis.md  valuation_methods.md
backend/knowledge_base/investment_theory/: risk_management.md
backend/knowledge_base/technical_analysis/: bollinger_bands.md  candlestick_patterns.md  macd.md  moving_averages.md  rsi.md  stochastic_kd.md  support_resistance.md  volume_analysis.md
backend/models/: prompts.py  schemas.py
backend/services/: agent_service.py  backtest_service.py  conversation_service.py  embedding_service.py  firestore_client.py  institutional_service.py  margin_service.py  news_service.py  portfolio_service.py  rag_service.py  stock_service.py
backend/tests/: test_agent.py  test_embedding.py  test_firestore.py  test_rag.py  test_stock_service.py
backend/tools/: __init__.py  backtest_tool.py  fundamental_analysis.py  institutional.py  knowledge_search.py  margin_trading.py  news_search.py  portfolio_tool.py  stock_price.py  technical_analysis.py
frontend/: .env.example  .firebaserc  firebase.json  index.html  package-lock.json  (+2 more)
(+29 files in other folders)
